[package]
name = "rspvasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ordered-float = "3.7.0"
spirv = "0.2.0"
spirq = { version = "0.6.4", path = "../spirq-rs/spirq" }
rspirv = "0.11.0"
anyhow = { version = "1.0.44", features = ["backtrace"] }
clap = { version = "4.3", features = ["derive"] }
concat-idents = "1.1"
paste = "1.0"
num-traits = "0.2"

[dev-dependencies]
pretty_assertions = "1.4"
